syntax = "proto3";

option csharp_namespace = "Itmo.Bebriki.Enums";

package itmo.bebriki;

enum JobTaskState {
  JOB_TASK_STATE_UNSPECIFIED = 0;
  JOB_TASK_STATE_PENDING_APPROVAL = 1;
  JOB_TASK_STATE_APPROVED = 2;
  JOB_TASK_STATE_REJECTED = 3;
}

enum JobTaskPriority {
  JOB_TASK_PRIORITY_UNSPECIFIED = 0;
  JOB_TASK_PRIORITY_LOW = 1;
  JOB_TASK_PRIORITY_MEDIUM = 2;
  JOB_TASK_PRIORITY_HIGH = 3;
  JOB_TASK_PRIORITY_CRITICAL = 4;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_CREATION = 1;
  EVENT_TYPE_UPDATE = 2;
  EVENT_TYPE_NEW_DEPS = 3;
  EVENT_TYPE_PRUNE_DEPS = 4;
}